Fix for bug 410226 . Leak in create_object_from_handles. r=nelson